--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;0,900;1,400&family=Cinzel:wght@400;700;900&family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400&family=Great+Vibes&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,600;0,700;0,800;0,900;1,400&family=Cinzel:wght@400;500;600;700;800;900&family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600&family=Great+Vibes&display=swap" rel="stylesheet">
     <style>
       body {
         font-family: 'Crimson Text', serif;
         background-color: #FDF5E6;
         scroll-behavior: smooth;
         color: #3D2B1F;
+        -webkit-font-smoothing: antialiased;
       }
       .font-serif-jawa {
         font-family: 'Playfair Display', serif;
@@ -40,9 +41,6 @@
         background: linear-gradient(to right, #BF953F, #FCF6BA, #B38728, #FBF5B7, #AA771C);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
-      }
-      .gold-border {
-        border-image: linear-gradient(to right, #BF953F, #FCF6BA, #B38728) 1;
       }
     </style>
 <script type="importmap">
